Get users from account feature
